--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,5 +1,5 @@
 body{
-    background: linear-gradient(to right, #f857a6, #ff5858);
+    background-color: rgb(31, 31, 31);
     font-family: 'Open Sans', sans-serif;
 }
 h1 {
